Move <script> to bottom of page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tarh</title>
   </head>
-  <script src="main.js" charset="utf-8" type="text/javascript"></script>
+  <!-- DO NOT Keep scripts in <head>! Keep them at the bottom of <body>! This will allow for them to render the page before loading the JS, allowing for instant DOM editing. -->
   <header>
 
   <h1> Tarh </h1>
@@ -44,7 +44,7 @@
     <button onclick="buyAutomaticBull()" id="autobull" style="display:none;">Auto Bull Kill Cost: 4000</button>
 
 
-
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
 
